2004-11-27  David Malcolm  <david@davemalcolm.demon.co.uk>

	* conglomerate-docs.sgml: added another tip for debugging the
	layout code
	
	* conglomerate-docs.sgml: word-wrapped the document

2004-11-16  Nickolay & Geert

	* bugzilla 158334

2004-10-27  Frederic Brin  <duckx@mezimail.com>

	* Makefile.am
	
	Added Enchant libs to the GTKDOC_LIBS
	
2004-10-27  Michèle Garoche  <michele.garoche@easyconnect.fr>

	* conglomerate-sections.txt:
	
	Removed section fo
	
	* conglomerate-docs.sgml:
	
	Removed &fo entity


2004-10-09  Michèle Garoche  <michele.garoche@easyconnect.fr>

	* conglomerate.types:
	
	Removed reference to fo.h

2004-09-23  David Malcolm  <david@davemalcolm.demon.co.uk>

	* conglomerate.types: 

	Added the various plugin/service GObject types

	* conglomerate-sections.txt: 

	Added titles for various sections

	* conglomerate-docs.sgml: 

	Reorganisation, mainly of plugins section

2004-09-07 Douglas Burke <dburke@cfa.harvard.edu>

	* conglomerate-docs.sgml

	Converted to match GTK+ docs (use of part rather than chapter
	to provide document structure). Added an index.
	
2004-09-02 Douglas Burke <dburke@cfa.harvard.edu>

	* conglomerate-docs.sgml

	Corrected a typo in a link attribute added in previous change.
	Added sect1 around initial text in the "The Editow Widget"
	chapter to match docbook DTD.

2004-09-01 Douglas Burke <dburke@cfa.harvard.edu>

	* conglomerate-docs.sgml

	Added missing pages (some may not be added to the best
	section) and updated the existing text to include links
	to pages.

	* conglomerate.types

	Added some missing include files/_get_type() functions.
	
2004-06-23 Nickolay V. Shmyrev <nshmyrev@yandex.ru>

	* README: Update.

	* conglomerate-sections.txt, conglomerate-types.txt:
	* conglomerate-overrides.txt: Update for recent sources.

	* conglomerate-docs.sgml: XInclude replaced with external
	entities. This is common practice of gtk-doc usage.

2003-12-22  Geert Stappers <stappers@stappers.nl>

	* Makefile.am: