@@ -1,3 +1,8 @@
+2004-12-04  Michèle Garoche  <michele.garoche@easyconnect.fr>
+
+	* conglomerate-sections.txt: various changes to remove warnings
+	at doc build time
+
 2004-11-27  David Malcolm  <david@davemalcolm.demon.co.uk>
 
 	* conglomerate-docs.sgml: added another tip for debugging the
